tests/hevm/fail/shape/shape.act
// contract A
contract A

constructor(uint z)

creates
   uint x := z


transition x() : uint256

updates
returns x

transition set_x(uint z)

updates
  x := z

// contract B
contract B

constructor(uint z)

creates
   uint y := z
   A a := new A(0)

transition y() : uint256

updates
returns y

transition a() : address<A>

iff
   CALLVALUE == 0

updates
returns a


// contract C
contract C

constructor(address<B> y)

iff
   CALLVALUE == 0

creates
   A a := y.a
   B b := y 
